<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent2">


    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/pop_widowns_tools_linear"
        android:layout_width="match_parent"
        android:layout_height="287px"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="190px"
            android:background="@color/tools_gray_bg"
            android:paddingRight="30px"
            android:paddingLeft="30px"
            android:paddingTop="35px"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/pop_windowns_text_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/mental_tool_history"
                android:text="@string/bottom_tools_save"
                style="@style/Tools_Text_style"/>
            <TextView
                android:id="@+id/pop_windowns_text_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/mental_tool_share"
                style="@style/Tools_Text_style"
                android:text="@string/bottom_tools_share" />
            <TextView
                android:id="@+id/pop_windowns_text_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/mental_tool_set"
                style="@style/Tools_Text_style"
                android:text="@string/bottom_tools_set"/>
            <TextView
                android:id="@+id/pop_windowns_text_look"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/mental_tool_look"
                style="@style/Tools_Text_style"
                android:visibility="gone"
                android:text="@string/bottom_tools_look" />
        </com.zhy.autolayout.AutoLinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#dddddd">
        </View>

        <RelativeLayout
            android:id="@+id/pop_widowns_tools_rl_close"
            android:layout_width="match_parent"
            android:background="@color/tools_gray_bg"
            android:layout_height="96px">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/mental_tool_close"/>
        </RelativeLayout>
    </com.zhy.autolayout.AutoLinearLayout>

    <RelativeLayout
        android:id="@+id/rl_menu_other"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/pop_widowns_tools_linear" />

</com.zhy.autolayout.AutoRelativeLayout>
